[project]
name = "init_file_implementation"
version = "0.1.0"
description = ""
authors = [
    {name = "raylai",email = "chunjueilai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]
packages = [{ include = "strinng_func"}]

[tool.poetry.scripts]
init_file_implementation = "init_file_implementation.main:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
conventional-commit = "^0.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
